Được tạo bằng Colaboratory

--- a/bt_slide52,53.ipynb
+++ b/bt_slide52,53.ipynb
@@ -79,7 +79,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P9uOfBNfc-0S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P9uOfBNfc-0S",
+        "outputId": "caf204f7-f995-4153-90ea-c0baa57c2525"
       },
       "source": [
         "import math\n",
@@ -90,8 +94,22 @@
         "print ('A (', xA, yA, ')\\nB (', xB, yB, ')')\n",
         "print ('khoang cach AB = ', float(math.sqrt((xB - xA)**2 + (yB - yA)**2)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nhap tung do diem A: 1\n",
+            "nhap hoang do diem A: 1\n",
+            "nhap tung do diem B: 2\n",
+            "nhap hoang do diem B: 2\n",
+            "A ( 1.0 1.0 )\n",
+            "B ( 2.0 2.0 )\n",
+            "khoang cach AB =  1.4142135623730951\n"
+          ]
+        }
+      ]
     }
   ]
 }
