Được tạo bằng Colaboratory

--- a/bt2_16_11.ipynb
+++ b/bt2_16_11.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "bt2_16/11.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJE6upV1MnulCP3HXjiFVX",
+      "authorship_tag": "ABX9TyN3Ln1y/xARecgOJz+Y5kx+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,16 +139,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JLQ0dcQVXv53",
-        "outputId": "a47413bc-56de-48f4-a7f0-2fd5af7b2807"
+        "outputId": "396ba8c7-1efa-4b89-b5ca-71e0b36b0e54"
       },
       "source": [
         "# tạo một số nguyên từ 1 - 7, hiển thị tên của các ngày trong tuần \n",
         "day = int(input(\"Nhập ngày: \"))\n",
-        "day = day % 7 \n",
+        "day = day % 7 + 1\n",
         "list_day = [\"chủ nhật\", \"thứ 2\", \"thứ 3\", \"thứ 4\", \"thứ 5\", \"thứ 6\", \"thứ 7\"]\n",
-        "print(list_day[day])"
+        "print(list_day[day-1])"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
