--- a/pandas_1.ipynb
+++ b/pandas_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pandas 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNm/VXfKNKagbuITHwTidsc",
+      "authorship_tag": "ABX9TyOfAvm9hGK2DOkdkjYN6dRx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,9 +58,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "64qyNb_0PWx9",
-        "outputId": "87e23e8a-f2ef-47ea-e36f-a0b69f588057"
+        "outputId": "a12d43e0-fba0-435d-ae4b-463dc4a6b3eb"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -96,35 +96,42 @@
       "cell_type": "code",
       "source": [
         "a = np.random.randint(1,10,7)\n",
-        "print(\"Vector hang co kich thuoc ngau nhien: \",a)\n",
+        "print(a)\n",
         "aa = pd.Series(a)\n",
-        "print(\"Series tuong ung: \")\n",
-        "print(aa)"
+        "aa"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y2OGjGerPiUE",
-        "outputId": "e4ce171f-527e-4f04-e8eb-1e399762971b"
+        "outputId": "088e2ca2-969a-48ba-972d-5ad1f6b08b92"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Vector hang co kich thuoc ngau nhien:  [5 4 4 4 8 2 7]\n",
-            "Series tuong ung: \n",
-            "0    5\n",
-            "1    4\n",
-            "2    4\n",
-            "3    4\n",
-            "4    8\n",
-            "5    2\n",
-            "6    7\n",
-            "dtype: int64\n"
+            "[3 8 6 6 6 3 7]\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    3\n",
+              "1    8\n",
+              "2    6\n",
+              "3    6\n",
+              "4    6\n",
+              "5    3\n",
+              "6    7\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     },
@@ -141,7 +148,7 @@
     {
       "cell_type": "code",
       "source": [
-        "4a = np.array([int(input(f\"nhap phan tu thu {i+1}: \")) for i in range(7)])\n",
+        "a = np.array([int(input(f\"nhap phan tu thu {i+1}: \")) for i in range(7)])\n",
         "print(\"Phan tu da nhap: \",a)\n",
         "print(\"series cua 7 phan tu bat ky: \")\n",
         "print(pd.Series(a))"
@@ -151,30 +158,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0rzMSVQJPutC",
-        "outputId": "a1a68395-7335-4354-8753-4471c632b703"
+        "outputId": "7511e814-0932-49b1-fb6d-edf7b9c3054d"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "nhap phan tu thu 1: 3\n",
-            "nhap phan tu thu 2: 5\n",
-            "nhap phan tu thu 3: 5\n",
+            "nhap phan tu thu 2: 4\n",
+            "nhap phan tu thu 3: 6\n",
             "nhap phan tu thu 4: 7\n",
-            "nhap phan tu thu 5: 8\n",
-            "nhap phan tu thu 6: 9\n",
-            "nhap phan tu thu 7: 6\n",
-            "Phan tu da nhap:  [3 5 5 7 8 9 6]\n",
+            "nhap phan tu thu 5: 3\n",
+            "nhap phan tu thu 6: 2\n",
+            "nhap phan tu thu 7: 2\n",
+            "Phan tu da nhap:  [3 4 6 7 3 2 2]\n",
             "series cua 7 phan tu bat ky: \n",
             "0    3\n",
-            "1    5\n",
-            "2    5\n",
+            "1    4\n",
+            "2    6\n",
             "3    7\n",
-            "4    8\n",
-            "5    9\n",
-            "6    6\n",
+            "4    3\n",
+            "5    2\n",
+            "6    2\n",
             "dtype: int64\n"
           ]
         }
@@ -194,11 +201,9 @@
       "cell_type": "code",
       "source": [
         "a = np.random.randint(1,10,[7,1])\n",
-        "print(\"vector cot: \")\n",
-        "print(a)\n",
-        "#dùng hàm reshape để đổi hàng và cột vì series chỉ nhận dữ liệu 1 chiều\n",
+        "a\n",
+        "\n",
         "aa = a.reshape(7,)\n",
-        "print(\"series tuong ung\")\n",
         "print(pd.Series(aa))"
       ],
       "metadata": {
@@ -206,30 +211,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PvLCWclvPxmz",
-        "outputId": "dbfcee62-79bb-48d3-ea8c-dc3c848eb752"
+        "outputId": "60425dc0-a60d-4eba-b367-d826929aeb53"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "vector cot: \n",
-            "[[8]\n",
-            " [9]\n",
-            " [7]\n",
-            " [4]\n",
-            " [7]\n",
-            " [6]\n",
-            " [4]]\n",
-            "series tuong ung\n",
             "0    8\n",
-            "1    9\n",
-            "2    7\n",
-            "3    4\n",
+            "1    8\n",
+            "2    8\n",
+            "3    5\n",
             "4    7\n",
-            "5    6\n",
-            "6    4\n",
+            "5    5\n",
+            "6    7\n",
             "dtype: int64\n"
           ]
         }
@@ -253,19 +249,16 @@
         "# list thành sẻies\n",
         "l1 = [1,2,3,4]\n",
         "print(\"list :\",l1)\n",
-        "print(\"chuyen list thanh series: \")\n",
-        "print(pd.Series(l1))\n",
+        "print(pd.Series(l1), \"\\n\")\n",
         "\n",
         "# tuple thành sẻié\n",
         "t1 = (1,3,4,5)\n",
         "print(\"tuple: \",t1)\n",
-        "print(\"chuyen tuple thanh series: \")\n",
-        "print(pd.Series(t1))\n",
+        "print(pd.Series(t1), \"\\n\")\n",
         "\n",
         "# dictionary thành sẻies\n",
         "d1 = {\"year\": 2003 , \"age\":18 }\n",
         "print(\"dictionary: \",d1)\n",
-        "print(\"chuyen dict thanh series: \")\n",
         "print(pd.Series(d1))"
       ],
       "metadata": {
@@ -273,30 +266,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tzfQ6cYKP5El",
-        "outputId": "31659e2e-cc74-40c0-bdda-9ccad46917dd"
+        "outputId": "e15977d3-5578-4315-9822-8a64db677749"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "list : [1, 2, 3, 4]\n",
-            "chuyen list thanh series: \n",
             "0    1\n",
             "1    2\n",
             "2    3\n",
             "3    4\n",
-            "dtype: int64\n",
+            "dtype: int64 \n",
+            "\n",
             "tuple:  (1, 3, 4, 5)\n",
-            "chuyen tuple thanh series: \n",
             "0    1\n",
             "1    3\n",
             "2    4\n",
             "3    5\n",
-            "dtype: int64\n",
+            "dtype: int64 \n",
+            "\n",
             "dictionary:  {'year': 2003, 'age': 18}\n",
-            "chuyen dict thanh series: \n",
             "year    2003\n",
             "age       18\n",
             "dtype: int64\n"
@@ -332,66 +324,65 @@
         "\n",
         "l1 = ['a','b','c','d','e','f','g','h','l','m','n','i','j','k','o','p','q','t','u','w']\n",
         "x.index=l1\n",
-        "print(\"Thay doi cach danh chi so: \")\n",
-        "print(x)"
+        "print(\"\\n\", x)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "v2EQUELMP8N8",
-        "outputId": "08d2f4bc-68aa-493a-802b-7a7b06a73d6c"
+        "outputId": "5c2aee71-b9eb-471c-87bc-de251c65ea09"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "chi so cua series:  RangeIndex(start=0, stop=20, step=1)\n",
-            "0      5\n",
-            "1      5\n",
-            "2     17\n",
+            "0     10\n",
+            "1      6\n",
+            "2      2\n",
             "3     19\n",
-            "4      4\n",
-            "5      6\n",
-            "6     12\n",
-            "7      6\n",
-            "8     14\n",
-            "9      5\n",
-            "10    14\n",
-            "11     4\n",
-            "12    18\n",
-            "13     3\n",
-            "14     4\n",
-            "15     1\n",
-            "16     4\n",
-            "17    18\n",
-            "18    19\n",
-            "19    15\n",
+            "4     15\n",
+            "5      2\n",
+            "6     15\n",
+            "7      1\n",
+            "8     19\n",
+            "9      7\n",
+            "10     4\n",
+            "11    19\n",
+            "12    17\n",
+            "13    14\n",
+            "14     5\n",
+            "15     4\n",
+            "16    19\n",
+            "17     4\n",
+            "18     4\n",
+            "19     7\n",
             "dtype: int64 \n",
             "\n",
-            "Thay doi cach danh chi so: \n",
-            "a     5\n",
-            "b     5\n",
-            "c    17\n",
+            "\n",
+            " a    10\n",
+            "b     6\n",
+            "c     2\n",
             "d    19\n",
-            "e     4\n",
-            "f     6\n",
-            "g    12\n",
-            "h     6\n",
-            "l    14\n",
-            "m     5\n",
-            "n    14\n",
-            "i     4\n",
-            "j    18\n",
-            "k     3\n",
-            "o     4\n",
-            "p     1\n",
-            "q     4\n",
-            "t    18\n",
-            "u    19\n",
-            "w    15\n",
+            "e    15\n",
+            "f     2\n",
+            "g    15\n",
+            "h     1\n",
+            "l    19\n",
+            "m     7\n",
+            "n     4\n",
+            "i    19\n",
+            "j    17\n",
+            "k    14\n",
+            "o     5\n",
+            "p     4\n",
+            "q    19\n",
+            "t     4\n",
+            "u     4\n",
+            "w     7\n",
             "dtype: int64\n"
           ]
         }
@@ -415,13 +406,13 @@
         "b = pd.Series(np.random.randint(1,10,[10]))\n",
         "l2 = ['a','b','c','d','e','f','g','h','i','j']\n",
         "b.index = l2\n",
-        "print(b)\n",
+        "print(b, \"\\n\")\n",
         "print(\"chi so a: \",b.loc['a'])\n",
         "print(\"chi so c: \",b.loc['c'])\n",
         "print(\"chi so e: \",b.loc['e'], \"\\n\")\n",
         "\n",
         "print(b)\n",
-        "print(\"chi so tu 3 den 6: \")\n",
+        "print(\"chi so tu 3 den 6: \", \"\\n\")\n",
         "print(b.iloc[3:7])\n"
       ],
       "metadata": {
@@ -429,45 +420,47 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z0sTbf4DQ3Va",
-        "outputId": "60d0c03d-eaf7-4a22-af92-3d18ca724879"
+        "outputId": "12362d51-beac-4668-c9ff-0b908d331d75"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "a    1\n",
-            "b    5\n",
-            "c    2\n",
-            "d    1\n",
-            "e    1\n",
-            "f    1\n",
-            "g    7\n",
-            "h    8\n",
-            "i    1\n",
-            "j    9\n",
-            "dtype: int64\n",
+            "b    7\n",
+            "c    9\n",
+            "d    3\n",
+            "e    9\n",
+            "f    2\n",
+            "g    6\n",
+            "h    1\n",
+            "i    4\n",
+            "j    8\n",
+            "dtype: int64 \n",
+            "\n",
             "chi so a:  1\n",
-            "chi so c:  2\n",
-            "chi so e:  1 \n",
+            "chi so c:  9\n",
+            "chi so e:  9 \n",
             "\n",
             "a    1\n",
-            "b    5\n",
-            "c    2\n",
-            "d    1\n",
-            "e    1\n",
-            "f    1\n",
-            "g    7\n",
-            "h    8\n",
-            "i    1\n",
-            "j    9\n",
+            "b    7\n",
+            "c    9\n",
+            "d    3\n",
+            "e    9\n",
+            "f    2\n",
+            "g    6\n",
+            "h    1\n",
+            "i    4\n",
+            "j    8\n",
             "dtype: int64\n",
-            "chi so tu 3 den 6: \n",
-            "d    1\n",
-            "e    1\n",
-            "f    1\n",
-            "g    7\n",
+            "chi so tu 3 den 6:  \n",
+            "\n",
+            "d    3\n",
+            "e    9\n",
+            "f    2\n",
+            "g    6\n",
             "dtype: int64\n"
           ]
         }
