Được tạo bằng Colaboratory

--- a/pandas_3.ipynb
+++ b/pandas_3.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "pandas 3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmVCdCCs5TVY7Cty0ROHPq",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOPFkDV6bXMBCfdusLAt+Bh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1108,6 +1109,46 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "định tính"
+      ],
+      "metadata": {
+        "id": "H59A_MX2JBor"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  tập dữ liệu \n",
+        "\n",
+        "fig,((ax1,ax2), (ax3,ax4), (ax5, ax6), (ax7, ax8)) = plt.subplots(nrows = 4,ncols = 2,figsize = (30,20))\n",
+        "ax1.bar(dict(ds[\"Region\"].value_counts()).keys(), dict(ds[\"Region\"].value_counts()).values());\n",
+        "ax1.set(title = \"Region\");\n",
+        "ax2.bar(dict(ds[\"Country\"].value_counts()).keys(), dict(ds[\"Country\"].value_counts()).values());\n",
+        "ax2.set(title = \"Country\");"
+      ],
+      "metadata": {
+        "id": "IwVskCb7JCwt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 15 hàng dữ liệu đầu tiên \n",
+        "fig, ((ax1,ax2), (ax3,ax4), (ax5, ax6), (ax7, ax8)) = plt.subplots(nrows = 4,ncols = 2,figsize = (30,20))\n",
+        "ax1.bar(dict(ds.iloc[:15,:][\"Region\"].value_counts()).keys(), dict(ds.iloc[:15, :8][\"Region\"].value_counts()).values());\n",
+        "ax1.set(title = \"Region\");\n"
+      ],
+      "metadata": {
+        "id": "poNzAc3gJTL6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
