Được tạo bằng Colaboratory

--- a/kiem_dinh_f.ipynb
+++ b/kiem_dinh_f.ipynb
@@ -81,7 +81,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "xWihUqpNG1n3",
-        "outputId": "b853de76-4d24-41c1-ee9c-651fc1b4d112",
+        "outputId": "18a43c5c-59f2-42a0-d30b-5306ae6af203",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "UG7ChdSTG1n5"
       },
@@ -125,21 +125,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "cx1va9tWG1n6",
-        "outputId": "751b7ff8-693a-4fba-8af7-9f5068d771b9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "f3f6c741-5b62-4e0e-b4f9-ca155719e104"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[7.2165522  7.46627259 7.49137536 7.14546032 7.37760958 7.26964263\n",
-            " 7.77612051 7.30468079 7.94450379 7.8793092 ]\n"
+            "[7.80435077 7.39173474 7.88538046 7.36791265 7.47550623 7.47039075\n",
+            " 7.42038182 7.785741   8.17327938 7.32138352]\n"
           ]
         }
       ],
@@ -150,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "80FkZsDuG1n7"
       },
@@ -165,21 +162,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Q_7vwCYPG1n8",
-        "outputId": "4bc75979-3b2b-4886-c99a-3d6f82c6afd5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "5c747361-8b7e-47f2-8465-8e09ae6ac908"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[6.70128905 6.99543921 6.77189641 6.76704283 6.8474015  6.80197973\n",
-            " 6.86027701 6.81970857 6.87635465 7.0634015 ]\n"
+            "[6.97392727 6.7680331  6.9765569  7.20116716 6.70116584 7.11348431\n",
+            " 7.13056472 7.28356771 7.13143519 7.12268851]\n"
           ]
         }
       ],
@@ -201,20 +195,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "e_SiEEDnG1n-",
-        "outputId": "34b3926a-aa69-4a9f-bf22-d83d447eb97c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "8ccf3f3e-60a5-484d-85e3-dcd85a3e150d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Stat value:  37.43064830191288 ; p-value:  9.47218838617897e-10\n"
+            "Stat value:  50.71159890972865 ; p-value:  1.0698543599175272e-12\n"
           ]
         }
       ],
@@ -226,18 +217,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "jIpUnFfKG1n-",
-        "outputId": "a099c892-7285-45e4-de27-f2db793ad1f8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "54b2c959-d891-4fd2-ecfa-1d03c992f9f4"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Có bằng chứng để bác bỏ giả thuyết H0\n"
           ]
@@ -265,99 +253,137 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "1Z8v_vnNG1n_",
-        "outputId": "4964333a-014e-44d6-d83f-bede92a0daf5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "sinh ngẫu nhiên 100 phần tử có trung bình mẫu 24.6 và độ lệch chuẩn là 4.2\n",
-            "[26.08422738 18.60923416 24.55168879 21.13577336 25.86577519 23.47384963\n",
-            " 28.85740559 21.85561061 34.19152967 21.48932638]\n",
-            "\n",
-            " sinh ngẫu nhiên 100 phần tử có trung bình mẫu 25.5 và độ lệch chuẩn là 5.1\n",
-            "[24.04478325 25.63203462 32.2266109  34.37565508 20.63626162 30.49734373\n",
-            " 31.22857954 28.78708558 32.43704373 17.00073646]\n"
-          ]
-        }
-      ],
-      "source": [
-        "#sinh ngẫu nhiên 100 phần tử có trung bình mẫu 24.6 và độ lệch chuẩn là 4.2\n",
-        "\n",
-        "print(\"sinh ngẫu nhiên 100 phần tử có trung bình mẫu 24.6 và độ lệch chuẩn là 4.2\")\n",
-        "samples_1= np.random.normal(24.6,4.2,100)\n",
-        "print(samples_1[:10])\n",
-        "\n",
-        "\n",
-        "#sinh ngẫu nhiên 100 phần tử có trung bình mẫu 25.5 và độ lệch chuẩn là 5.1\n",
-        "\n",
-        "print(\"\\n\",\"sinh ngẫu nhiên 100 phần tử có trung bình mẫu 25.5 và độ lệch chuẩn là 5.1\")\n",
-        "samples_2= np.random.normal(25.5,5.1,100)\n",
-        "print(samples_2[:10])"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Xây dựng giả thuyết:\n",
-        "$$H_{0}: \\sigma_{1}^{2} = \\sigma_{2}^{2}$$\n",
-        "$$H_{a}: \\sigma_{1}^{2} < \\sigma_{2}^{2}$$"
+        "$$H_0: σ_1^2 = σ_2^2$$\n",
+        "Giả thuyết thay thế:\n",
+        "$$H_1: σ_1^2 > σ_2^2$$\n"
       ],
       "metadata": {
-        "id": "TKktqNJ5Elqx"
+        "id": "ZcohSQ2gBCpl"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "def f_test(x, y,alt=\"two-sided\"):\n",
-        "    df1 = len(x) - 1\n",
-        "    df2 = len(y) - 1\n",
-        "    f = x.var() / y.var()\n",
-        "    if alt == \"greater\":\n",
-        "        p = 1.0 - stats.f.cdf(f, df1, df2)\n",
-        "    elif alt == \"less\":\n",
-        "        p = stats.f.cdf(f, df1, df2)\n",
-        "    else:\n",
-        "        p = 2.0*(1.0 - stats.f.cdf(f, df1, df2))\n",
-        "    return f, p\n",
-        "\n",
-        "# Thông số\n",
-        "f, p = f_test (samples_1,samples_2)\n",
-        "alpha = 0.05\n",
-        "print(\"f: \",f,\"\\n\",\"p: \",p,\"\\n\")\n",
-        "\n",
-        "if(p_value <  alpha):\n",
-        "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
-        "else:\n",
-        "  print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
+        "# Sinh ngẫu nhiên mẫu thứ 1:\n",
+        "sample_1= np.random.normal(24.6,4.2,40)\n",
+        "print(sample_1)"
       ],
       "metadata": {
-        "id": "KhPVWHgsEmv6",
-        "outputId": "33ea82d6-eb1f-4fd4-b6ae-14b3af7253de",
+        "id": "4vfOJLdqvUFk",
+        "outputId": "74341491-f4e6-417a-8f31-e9dd84c409d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "f:  0.6130913792654081 \n",
-            " p:  1.9843032107663403 \n",
-            "\n",
-            "Có bằng chứng để bác bỏ giả thuyết H0\n"
+            "[16.97367937 31.53688695 17.98438961 25.47442003 25.26034042 25.16575451\n",
+            " 28.0878026  23.78008104 24.8605122  30.40062017 21.60388868 30.60038814\n",
+            " 25.18176753 23.56347145 25.77562437 24.11261258 22.3024116  24.88220081\n",
+            " 26.64197993 29.5724786  34.46234763 17.4135115  20.555842   29.14501998\n",
+            " 28.56188862 27.76155937 26.67181462 26.62771029 37.48387884 16.74889619\n",
+            " 25.22631928 26.72966316 15.71242511 28.63017591 28.2480906  25.01937287\n",
+            " 24.78791116 20.89481122 24.01032266 26.8234413 ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sinh ngẫu nhiên mẫu thứ 2:\n",
+        "sample_2 = np.random.normal(25.5,5.1,40)\n",
+        "print(sample_2)"
+      ],
+      "metadata": {
+        "id": "TZfT4-5DzeRT",
+        "outputId": "b3c058f7-999c-4235-ce14-5037288faa1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[24.82347995 33.2745604  24.98017443 21.93436306 34.71478011 17.21477288\n",
+            " 28.68336922 32.17577864 20.54051193 28.73831243 27.46611868 27.21857013\n",
+            " 24.59545981 20.3093637  26.98860011 22.25123561 23.48746683 17.68645882\n",
+            " 38.08224403 25.04845034 25.47062867 40.23599179 22.23179166 24.61978996\n",
+            " 23.02637735 27.85259132 28.19324467 32.85589007 18.05763824 22.26490923\n",
+            " 28.18383782 28.32409659 26.9198729  30.18252831 16.30336264 24.01697096\n",
+            " 22.83482277 21.19359123 15.87158474 24.87952694]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Xác định thông số:\n",
+        "sig = 0.05"
+      ],
+      "metadata": {
+        "id": "JSgRCjVLziBI"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "1Z8v_vnNG1n_"
+      },
+      "outputs": [],
+      "source": [
+        "# Ta viết hàm f_test:\n",
+        "def f_test(sample_1, sample_2, type_test, sig):\n",
+        "    df1 = len(sample_1) - 1\n",
+        "    df2 = len(sample_2) - 1\n",
+        "    f_stat = sample_1.var() / sample_2.var()\n",
+        "    if type_test == \"smaller\":\n",
+        "        p_value = stats.f.cdf(f_stat, df1, df2)\n",
+        "    elif type_test == \"larger\":\n",
+        "        p_value = 1.0 - stats.f.cdf(f_stat, df1, df2)\n",
+        "    else:\n",
+        "        p_value = 2.0*(1.0 - stats.f.cdf(f_stat, df1, df2))\n",
+        "# Kiểm định giả thuyết\n",
+        "    if p_value < sig:\n",
+        "      print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
+        "    else:\n",
+        "      print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tiến hành f_test:\n",
+        "f_test(sample_1, sample_2, \"larger\", sig)"
+      ],
+      "metadata": {
+        "id": "rrlj7pSS0MIf",
+        "outputId": "d38e30ce-cc20-43d5-bcfe-e980c60201f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
           ]
         }
       ]
