Được tạo bằng Colaboratory

--- a/huong_dan_du_lieu_ANOVA.ipynb
+++ b/huong_dan_du_lieu_ANOVA.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "udymFstj-pwF"
       },
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "4SfMT_Fc-pwH"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "JHAsIYBK-pwH",
         "outputId": "1c16d4f4-12d7-4ee0-e9f3-03eeb5a69fdb",
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "AVndT2BM-pwJ"
       },
@@ -261,7 +261,7 @@
         "id": "SKtks84hSDoK",
         "outputId": "24344ab0-065f-43d8-8c08-7061b99bf6cd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "tKLNvPzU-pwL"
       },
@@ -478,7 +478,7 @@
         "id": "9BHvIyniHJ0i",
         "outputId": "4b336f4e-810d-4e00-842b-08215c84808d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,9 +658,13 @@
       "source": [
         "Phát biểu của bạn ở đây: ...\n",
         "\n",
-        "- Giả thuyết null: Không có sự khác biệt về điểm trung bình (GPA) giữa sinh viên các năm\n",
+        "- Giả thuyết null: \n",
         "\n",
-        "- Giả thuyết thay thế: Tồn tại sự khác biệt về điểm trung bình giữa sinh viên các năm"
+        "$H_0$: Không có sự khác biệt về điểm trung bình (GPA) giữa sinh viên các năm\n",
+        "\n",
+        "- Giả thuyết thay thế: \n",
+        "\n",
+        "$H_a$: Tồn tại sự khác biệt về điểm trung bình giữa sinh viên các năm"
       ]
     },
     {
@@ -674,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "5dG1D43l-pwN",
         "outputId": "b2ed6cd9-d323-4481-ea33-f7620feb59fc",
@@ -715,7 +719,7 @@
         "\n",
         "Giả thuyết thay thế\n",
         "\n",
-        "$H_1$ : Tồn tại ít nhất sự khác biệt về mức độ thất vọng của sinh viên giữa các ngành"
+        "$H_a$ : Tồn tại ít nhất sự khác biệt về mức độ thất vọng của sinh viên giữa các ngành"
       ],
       "metadata": {
         "id": "kb6ruFmVA7AJ"
@@ -723,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "rH8tZqdo-pwO"
       },
@@ -751,7 +755,7 @@
         "id": "rVm_eJKIK1wi",
         "outputId": "a1b178ae-4e49-4e11-9b41-0ada3ebb93e8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
