Được tạo bằng Colaboratory

--- a/bai1_hồi_quy_tuyến_tính_đơn_biến.ipynb
+++ b/bai1_hồi_quy_tuyến_tính_đơn_biến.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwS6OVFIFdBN/XU7m2pO5l",
+      "mount_file_id": "1B0X4V3uJFnX7sHyd5IuZ3Vb3Hkb0dunV",
+      "authorship_tag": "ABX9TyNHutBhg/h+VjupkWVyNYNZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +45,7 @@
       "source": [
         "def readData(folder, filename):\n",
         "    data = np.loadtxt(os.path.join(folder, filename), delimiter=',')\n",
-        "    print('Original data shape', data.shape)\n",
+        "    print('Original data shape: ', data.shape)\n",
         "    X = data[:,0]\n",
         "    print('X shape: ', X.shape)\n",
         "    y = data[:,1]\n",
@@ -58,8 +59,39 @@
       "metadata": {
         "id": "ZmEMcKQ97lVV"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    X, y = readData(\"/content/drive/MyDrive\", \"ex1data1.txt\")\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qXxwdoNj39ME",
+        "outputId": "2bd9d390-9186-4551-df19-dc178241be6e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original data shape:  (97, 2)\n",
+            "X shape:  (97,)\n",
+            "y shape:  (97,)\n",
+            "Number of training examples m =  97\n",
+            "Modified X shape:  (97, 2)\n"
+          ]
+        }
+      ]
     }
   ]
 }
